Android: Integrating wave form branch! PeakFileService now supports non-floating point decoding channels. The WaveFormView control now displays the status of generating a peak file. WaveFormCacheManager is based on the same class on iOS; all that's left to do is to actually draw the waveform in a bitmap in another thread. But generating a peak file and loading it afterwards works and does not slow down the UI or the player so far. An interface/abstract should be added later to WaveFormCacheManager to centralize as much code as possible.
Related to issue #406.

--- a/MPfm/MPfm.Android/MPfm.Android.csproj
+++ b/MPfm/MPfm.Android/MPfm.Android.csproj
@@ -121,6 +121,10 @@
     <Compile Include="Classes\Listeners\ResolveListener.cs" />
     <Compile Include="Classes\Listeners\DiscoveryListener.cs" />
     <Compile Include="Classes\Listeners\RegistrationListener.cs" />
+    <Compile Include="Classes\Managers\Events\GenerateWaveFormEventArgs.cs" />
+    <Compile Include="Classes\Managers\Events\LoadPeakFileEventArgs.cs" />
+    <Compile Include="Classes\Managers\Events\GeneratePeakFileEventArgs.cs" />
+    <Compile Include="Classes\Managers\WaveFormCacheManager.cs" />
     <Compile Include="Classes\Navigation\AndroidNavigationManager.cs" />
     <Compile Include="Classes\Receivers\ConnectionChangeReceiver.cs" />
     <Compile Include="Classes\Receivers\LockReceiver.cs" />
