Windows/WindowsPhone/WindowsStore: Updated projects after changes on other platforms.

--- a/MPfm/MPfm.Core/MPfm.Core.WindowsStore.csproj
+++ b/MPfm/MPfm.Core/MPfm.Core.WindowsStore.csproj
@@ -107,6 +107,7 @@
     <Compile Include="ByteArrayQueue.cs" />
     <Compile Include="CacheStore.cs" />
     <Compile Include="Conversion.cs" />
+    <Compile Include="DatabaseFieldMap.cs" />
     <Compile Include="DatabaseFieldNameAttribute.cs" />
     <Compile Include="Normalizer.cs" />
     <Compile Include="OS.cs" />
