--- a/MPfm/MPfm.Library/MPfm.Library.WindowsStore.csproj
+++ b/MPfm/MPfm.Library/MPfm.Library.WindowsStore.csproj
@@ -127,6 +127,7 @@
     <Compile Include="Database\Interfaces\ISQLiteGateway.cs" />
     <Compile Include="Database\DatabaseFacade.cs" />
     <Compile Include="Objects\NetworkState.cs" />
+    <Compile Include="Objects\PlaylistAudioFile.cs" />
     <Compile Include="Objects\PlaylistFile.cs" />
     <Compile Include="Objects\History.cs" />
     <Compile Include="Objects\Setting.cs" />
